<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/frame"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center|start|bottom"
            android:text="@string/adas_scenario_mode"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

        <RadioGroup
            android:id="@+id/group_adas_scenario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_run"
                style="@style/SmallRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/adas_run_mode_render"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_run_recorder"
                style="@style/SmallRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/adas_run_mode_recorder"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_run_test"
                style="@style/SmallRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/adas_run_mode_test"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_adas_file_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/frame"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adas_run_mode_file"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@android:color/holo_blue_light" />

        <LinearLayout
            android:id="@+id/layout_adas_pack_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/adas_feed_pack_path"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_adas_pack_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/adas_feed_default_path"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>